--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,7 +5,8 @@ name: Python package
 
 on:
   schedule:
-    - cron: '*/7 * * * *'
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '*/10 * * * *'
 
 jobs:
   build:
