--- a/.github/workflows/scan-package.yml
+++ b/.github/workflows/scan-package.yml
@@ -4,14 +4,17 @@
 name: Monitor
 
 on:
+  push:
   schedule:
-    - cron: '*/10 * * * *'
+    - cron: '*/15 * * * *'
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        sleep: ['1', '30', '60']
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 
@@ -24,4 +27,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
-        python bot.py
+        python bot.py ${{ matrix.sleep }}
