--- a/.github/workflows/scan-package.yml
+++ b/.github/workflows/scan-package.yml
@@ -5,7 +5,7 @@ name: Monitor
 
 on:
   schedule:
-    - cron: '* * * * *'
+    - cron: '0 * * * *'
 
 jobs:
   build:
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        sleep: ['1', '120']
+        sleep: ['1', '150', '300', '450', '600', '750', '900', '1050', '1200', '1350', '1500', '1650', '1800', '1950', '2100', '2250', '2400', '2550', '2700']
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 
