--- a/.github/workflows/scan-package.yml
+++ b/.github/workflows/scan-package.yml
@@ -27,4 +27,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
-        python bot.py ${{ matrix.sleep }}
+        python bot.py ${{ matrix.sleep }} ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_TO }}
