--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        sleep: ['1', '150']
+        sleep: ['1']
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 
