--- a/.github/workflows/1900.yml
+++ b/.github/workflows/1900.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        sleep: ['1', '60', '120', '180', '240', '270', '300', '360', '420', '480', '540', '570', '600']
+        sleep: ['1', '60', '120', '180', '240', '270', '300', '360', '420', '480', '540', '570', '600', '660', '720', '780', '840', '870', '900']
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 
